# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

ohos_shared_library("distributed_camera_sink_sdk") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }
  stack_protector_ret = true

  include_dirs = [
    "include",
    "include/callback",
    "${common_path}/include/constants",
    "${common_path}/include/utils",
  ]

  sources = [
    "src/callback/dcamera_sink_callback.cpp",
    "src/callback/dcamera_sink_callback_stub.cpp",
    "src/dcamera_sink_handler.cpp",
    "src/dcamera_sink_handler_ipc.cpp",
    "src/dcamera_sink_load_callback.cpp",
    "src/distributed_camera_sink_proxy.cpp",
  ]

  ldflags = [
    "-fpie",
    "-Wl,-z,relro",
    "-Wl,-z,now",
  ]

  deps = [ "${common_path}:distributed_camera_utils" ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dcamerasinkkits\"",
    "LOG_DOMAIN=0xD004150",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_camera"
}
