# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

ohos_shared_library("distributed_camera_client") {
  include_dirs = [
    "${camera_hdf_path}/camera/interfaces/metadata/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "${graphicstandard_path}/frameworks/surface/include",
    "${camerastandard_path}/interfaces/inner_api/native/camera/include",
    "${camerastandard_path}/interfaces/inner_api/native/camera/include/input",
    "${camerastandard_path}/interfaces/inner_api/native/camera/include/output",
    "${camerastandard_path}/interfaces/inner_api/native/camera/include/session",
    "${camerastandard_path}/services/camera_service/binder/base/include",
    "${camerastandard_path}/services/camera_service/binder/client/include",
    "${camerastandard_path}/services/camera_service/binder/server/include",
    "${camerastandard_path}/services/camera_service/include",
  ]

  include_dirs += [
    "include",
    "include/callback",
    "include/listener",
    "${common_path}/include/constants",
    "${common_path}/include/utils",
    "${services_path}/cameraservice/base/include",
    "//third_party/jsoncpp/include",
  ]

  sources = [
    "src/callback/dcamera_input_callback.cpp",
    "src/callback/dcamera_manager_callback.cpp",
    "src/callback/dcamera_photo_callback.cpp",
    "src/callback/dcamera_preview_callback.cpp",
    "src/callback/dcamera_session_callback.cpp",
    "src/callback/dcamera_video_callback.cpp",
  ]

  if (!distributed_camera_common) {
    sources += [
      "src/dcamera_client.cpp",
      "src/listener/dcamera_photo_surface_listener.cpp",
      "src/listener/dcamera_video_surface_listener.cpp",
    ]
  } else {
    sources += [
      "src/dcamera_client_common.cpp",
      "src/listener/dcamera_photo_surface_listener_common.cpp",
      "src/listener/dcamera_video_surface_listener_common.cpp",
    ]
  }

  deps = [
    "${camerastandard_path}/frameworks/native/camera:camera_framework",
    "${common_path}:distributed_camera_utils",
    "${graphicstandard_path}:libsurface",
    "//drivers/peripheral/camera/interfaces/metadata:metadata",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dcameraclient\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_camera:libcamera_proxy_1.0",
    "drivers_interface_distributed_camera:libdistributed_camera_provider_proxy_1.0",
    "ipc:ipc_core",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_camera"
}
