# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

ohos_shared_library("distributed_camera_provider_config") {
  include_dirs = [
    "${distributedcamera_hdf_path}/interfaces/hdi_ipc/server/provider",
    "${distributedcamera_hdf_path}/interfaces/include",
    "${distributedcamera_hdf_path}/hdi_impl/include/dcamera_provider",
    "${distributedcamera_hdf_path}/hdi_impl/include/utils",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "${camera_hdf_path}/camera/interfaces/include",
    "${camera_hdf_path}/camera/interfaces/hdi_ipc",
    "${hdf_framework_path}/include/utils",
    "${hdf_framework_path}/include/core",
    "${hdf_framework_path}/include/osal",
    "${hdf_uhdf_path}/include/hdi",
    "${hdf_uhdf_path}/osal/include",
    "${hdf_uhdf_path}/ipc/include",
    "${hdf_uhdf_path}/include/host",
    "//drivers/peripheral/camera/interfaces/metadata/include",
  ]

  sources = [ "dcamera_provider_config.cpp" ]

  deps = [
    "${distributedcamera_hdf_path}/hdi_impl:distributed_camera_hdf",
    "//utils/native/base:utils",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedcamerahdf\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "device_driver_framework:libhdf_host",
    "graphic_chipsetsdk:buffer_handle",
    "graphic_chipsetsdk:surface",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
  ]
  install_images = [ chipset_base_dir ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_camera"
}
