# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

module_out_path = "${unittest_output_path}/utils_test"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${common_path}/include/constants",
    "${common_path}/include/utils",
    "${feeding_smoother_path}/base",
    "${services_path}/cameraservice/base/include",
  ]
}

## UnitTest utils_test
ohos_unittest("CommonUtilsTest") {
  module_out_path = module_out_path

  sources = [
    "data_buffer_test.cpp",
    "dcamera_buffer_handle_test.cpp",
    "dcamera_hidumper_test.cpp",
    "dcamera_hisysevent_adapter_test.cpp",
    "dcamera_radar_test.cpp",
    "dcamera_utils_tools_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [ "${common_path}:distributed_camera_utils" ]

  cflags = [
    "-fPIC",
    "-Wall",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "drivers_interface_distributed_camera:libdistributed_camera_provider_proxy_1.1",
    "hdf_core:libhdi",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"CommonUtilsTest\"",
    "LOG_DOMAIN=0xD004150",
    "DCAMERA_MMAP_RESERVE",
  ]
  cflags_cc = cflags
}

group("utils_test") {
  testonly = true
  deps = [ ":CommonUtilsTest" ]
}
